--- a/style.css
+++ b/style.css
@@ -34,7 +34,9 @@ button {
   border: none;
   border-radius: 4px;
   background-color: rgb(230, 230, 230);
-  width: 30px;
+  width: 25px;
+  color: rgb(92, 92, 92);
+  font-weight: bold;
   position: absolute;
   top: 5px;
   right: 5px;
